patch to add ligature
fix url detection

fix selected wide_char display issue

remove submodule and patch with git url

performance improvement and add benchmark result

- remove the use of drain. use split_off for better performance
- eliminate unnecessary copies
- compare the latest master branch with current ligature branch and
record in performance.md

several bugfix and performance updates:

- improve performance when ligature is disabled (render_timer almost the same as upstream)
- fix bug getting font face
- optimize text_run, remove the cells function and shape_run.
- RenderableCell now all passed in as references
- replace '\t' with ' '

cache the RenderableCell and Glyph to make rendering faster

remove RenderableCellIter and replace with TextRunIter

improve performance in first iteration

move assignment of data into renderer

improve performance, fix fg color of cursor

improve render time when resizing the window

fix version for harfbuzz, fix trait impl in Rasterizer

remove geuss_segment_properties since it will be called on shape

Fix: compilation in mac and windows

Feature: allow macos to use ligature. fix compilation error

upgrade harfbuzz-rs

Fix memory leak

use usize width in LatestCol to prevent additional if-condition

Feature: show fps in title bar

unlock windows ligature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ members = [
 lto = true
 debug = 1
 incremental = false
+
+[patch.crates-io]
+crossfont = { git = "https://github.com/zenixls2/crossfont", branch = "ligature", features = ["force_system_fontconfig"] }
